--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "build": "npm run clean && npm run  && npm run build:client && npm run build:server && npm run postbuild",
     "build:client": "tsc && vite build",
     "build:server": "tsc -p tsconfig.node.json && vite build --ssr src/entry-server.tsx",
+    "clean": "rimraf dist node_modules npm run .lock .amplify-hosting",
     "dev": "nodemon --watch server --exec tsx server",
     "format": "prettier --write src server.ts api",
-    "lint": "npm run  eslint src server.ts api --report-unused-disable-directives --max-warnings 0",
+    "lint": "npm run eslint src server.ts api --report-unused-disable-directives --max-warnings 0",
     "postbuild": "chmod +x postbuild.sh && ./postbuild.sh",
     "serve": "node server/server.js",
     "type-check": "tsc --noEmit"
